--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,156 @@
     />
     <title>Chronos</title>
     <link rel="stylesheet" href="css/materialize.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h3 class="quad-title">Priority Quadrant</h3>
+      <div class="row">
+        <div class="col s1 m1 l1">
+          <!-- to center the quadrant -->
+        </div>
+
+        <!-- <div id="quadrant" class="col s10 m10 l10">
+          <div class="row up quad-row">
+            <div class="top-left col s6 m6 l6">
+              <h5>Top Left Quadrant</h5>
+              <ul>
+                <li>
+                  <span class="grey-text"
+                    >One of the tasks Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Neque tempora, reprehenderit id enim eius
+                    perspiciatis maiores perferendis. In quo libero, sunt ad
+                    porro consequuntur, officia saepe odio totam dolor veritatis
+                    tempora non? Tempora corrupti delectus, perferendis
+                    voluptatum dignissimos saepe maiores repellendus doloribus
+                    incidunt perspiciatis atque, veritatis recusandae eius.
+                    Vitae, ipsa.</span
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="top-right col s6 m6 l6">
+              <ul>
+                <li>
+                  top right quadrant Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Iure nisi reprehenderit illo amet voluptate
+                  quae, doloremque accusamus minus, voluptatem quam deserunt
+                  consequatur aliquid! In, numquam.
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="row quad-row">
+            <div class="bottom-left col s6 m6 l6">
+              <ul>
+                <li>bottom left quadrant</li>
+              </ul>
+            </div>
+            <div class="bottom-right col s6 m6 l6">
+              <ul>
+                <li>bottom right quadrant</li>
+              </ul>
+            </div>
+          </div>
+        </div> -->
+
+        <table class="col s10 quad-table">
+          <tr>
+            <td class="top-left">
+              <h5>Important and Urgent</h5>
+              <ul class="collection">
+                <li class="collection-item">The first item</li>
+                <li class="collection-item">The second item</li>
+                <li class="collection-item">The third item</li>
+              </ul>
+            </td>
+            <td class="top-right">
+              Top right Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Placeat impedit sint, tenetur expedita saepe fugiat similique
+              laboriosam, eos architecto voluptatum assumenda voluptas mollitia?
+              Quasi fuga soluta repellat molestiae obcaecati dolores,
+              reprehenderit ut quo pariatur aut doloribus esse, vero reiciendis
+              nobis consectetur numquam. Minima saepe, officiis quisquam
+              recusandae similique earum quasi.
+            </td>
+          </tr>
+          <tr>
+            <td class="bottom-left">Bottom left</td>
+            <td class="bottom-right">Bottom right</td>
+          </tr>
+        </table>
+
+        <div class="col s1 m1 l1">
+          <!-- to center the quadrant -->
+        </div>
+      </div>
+
+      <div class="add-data">
+        <h4>Add task</h4>
+        <p class="sub-instruction">
+          Describe and add your tasks to their appropriate place in the quadrant
+        </p>
+        <!-- <div class="collection"> -->
+        <div class="bored">
+          <div class="collection-item">
+            <div class="row">
+              <div class="input-field col s8 m8 l8">
+                <input id="task" type="text" class="validate" />
+                <label for="task">Task</label>
+              </div>
+              <div class="input-field col s4 m4 l4">
+                <select>
+                  <option value="0" disabled selected>Select priority</option>
+                  <option value="1">Top Left</option>
+                  <option value="2">Top Right</option>
+                  <option value="3">Bottom Left</option>
+                  <option value="4">Bottom Right</option>
+                </select>
+                <label>Priority Level</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12 m12 l12">
+                <textarea
+                  id="textarea1"
+                  placeholder="Short description of the task (optional)..."
+                  class="materialize-textarea"
+                ></textarea>
+                <label for="textarea1">Description</label>
+              </div>
+            </div>
+            <div class="row">
+              <button
+                class="btn waves-effect waves-light col s3 m3 l2 offset-s9 offset-m9 offset-l10"
+                type="submit"
+                name="action"
+              >
+                Add
+                <!-- <i class="material-icons right">send</i> -->
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="complete">
+        <h4>Completed Tasks</h4>
+        <p class="sub-instruction">These tasks are cleared on a daily basis</p>
+        <ul class="collection">
+          <li class="collection-item">
+            Task, date
+            <span class="badge red white-text waves-effect waves-light">X</span>
+          </li>
+          <li class="collection-item">
+            Task, date<span
+              class="badge red white-text waves-effect waves-light"
+              >X</span
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
+  <script src="./js/materialize.min.js"></script>
+  <script src="./js/index.js"></script>
 </html>
