--- a/app/index.html
+++ b/app/index.html
@@ -17,90 +17,55 @@
   </head>
   <body>
     <div class="container">
+      <div class="blurrable">
       <h3 class="quad-title">Priority Quadrant</h3>
       <div class="row">
         <div class="col s1 m1 l1">
           <!-- to center the quadrant -->
         </div>
 
-        <!-- <div id="quadrant" class="col s10 m10 l10">
-          <div class="row up quad-row">
-            <div class="top-left col s6 m6 l6">
-              <h5>Top Left Quadrant</h5>
-              <ul>
-                <li>
-                  <span class="grey-text"
-                    >One of the tasks Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Neque tempora, reprehenderit id enim eius
-                    perspiciatis maiores perferendis. In quo libero, sunt ad
-                    porro consequuntur, officia saepe odio totam dolor veritatis
-                    tempora non? Tempora corrupti delectus, perferendis
-                    voluptatum dignissimos saepe maiores repellendus doloribus
-                    incidunt perspiciatis atque, veritatis recusandae eius.
-                    Vitae, ipsa.</span
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="top-right col s6 m6 l6">
-              <ul>
-                <li>
-                  top right quadrant Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Iure nisi reprehenderit illo amet voluptate
-                  quae, doloremque accusamus minus, voluptatem quam deserunt
-                  consequatur aliquid! In, numquam.
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="row quad-row">
-            <div class="bottom-left col s6 m6 l6">
-              <ul>
-                <li>bottom left quadrant</li>
-              </ul>
-            </div>
-            <div class="bottom-right col s6 m6 l6">
-              <ul>
-                <li>bottom right quadrant</li>
-              </ul>
-            </div>
-          </div>
-        </div> -->
-
         <table class="col s10 quad-table">
           <tr>
             <td class="top-left">
               <h5>Important and Urgent</h5>
-              <ol class="collection">
-                <li class="collection-item">The first item</li>
-                <li class="collection-item">The second item</li>
-                <li class="collection-item">The third item</li>
+              <ol class="collection IUList">
+                <li class="collection-item">Buy milk</li>
+                <li class="collection-item">Buy orange</li>
+                <li class="collection-item">Buy scapel</li>
               </ol>
             </td>
             <td class="top-right">
-              <h5>Not Important and Urgent</h5>
-              <ol class="collection">
-                <li class="collection-item">The first item</li>
-                <li class="collection-item">The second item</li>
-                <li class="collection-item">The third item</li>
+              <h5>Unimportant and Urgent</h5>
+              <ol class="collection NIUList">
+                <li class="collection-item">Burn the meat</li>
+                <li class="collection-item">Dump the thrash</li>
+                <li class="collection-item">Finish star wars</li>
               </ol>
             </td>
           </tr>
           <tr>
             <td class="bottom-left">
               <h5>Important and Not Urgent</h5>
-              <ol class="collection">
-                <li class="collection-item">The first item</li>
-                <li class="collection-item">The second item</li>
-                <li class="collection-item">The third item</li>
+              <ol class="collection INUList">
+                <li class="collection-item">Give him a loan</li>
+                <li class="collection-item">Buy my harley davidson</li>
+                <li class="collection-item">Get my foam from AMD or ryzen</li>
               </ol>
             </td>
             <td class="bottom-right">
-              <h5>Not Important and Not Urgent</h5>
-              <ol class="collection">
-                <li class="collection-item">The first item</li>
-                <li class="collection-item">The second item</li>
-                <li class="collection-item">The third item</li>
+              <h5>Unimportant and Not Urgent</h5>
+              <ol class="collection NINUList">
+                <li class="collection-item">
+                  This is in preparation for the complete task part
+                  <div class="further-info desc-text">this is the description</div>
+                  <span class="further-info time">time part</span>
+                </li>
+                <li class="collection-item">
+                  Remember to dream big but start small
+                </li>
+                <li class="collection-item">
+                  Tell that p***y n***a to check his period
+                </li>
               </ol>
             </td>
           </tr>
@@ -125,12 +90,12 @@
                 <label for="task">Task</label>
               </div>
               <div class="input-field col s4 m4 l4">
-                <select>
+                <select id="priority">
                   <option value="0" disabled selected>Select priority</option>
-                  <option value="1">Top Left</option>
-                  <option value="2">Top Right</option>
-                  <option value="3">Bottom Left</option>
-                  <option value="4">Bottom Right</option>
+                  <option value="IU">Important and Urgent</option>
+                  <option value="NIU">Unimportant and Urgent</option>
+                  <option value="INU">Important and Not Urgent</option>
+                  <option value="NINU">Unimportant and Not Urgent</option>
                 </select>
                 <label>Priority Level</label>
               </div>
@@ -138,15 +103,16 @@
             <div class="row">
               <div class="input-field col s12 m12 l12">
                 <textarea
-                  id="textarea1"
+                  id="task-desc"
                   placeholder="Short description of the task (optional)..."
                   class="materialize-textarea"
                 ></textarea>
-                <label for="textarea1">Description</label>
+                <label for="task-desc">Description</label>
               </div>
             </div>
             <div class="row">
               <button
+                id="btn-add"
                 class="btn waves-effect waves-light btn-cable-pink col s3 m3 l2 offset-s9 offset-m9 offset-l10"
                 type="submit"
                 name="action"
@@ -175,8 +141,16 @@
               >X</span
             >
           </li>
+          <li class="collection-item">
+            Task, date<span
+              class="badge btn-cable-pink white-text waves-effect waves-light"
+              >X</span
+            >
+          </li>
         </ul>
       </div>
+    </div>
+      <div class="extend-info further-info"></div>
     </div>
   </body>
   <script src="./js/materialize.min.js"></script>
