Added settings form

--- a/app/index.html
+++ b/app/index.html
@@ -129,8 +129,9 @@
         </div>
         <div class="complete">
           <h4>Completed Tasks</h4>
-          <p class="sub-instruction">
-            These tasks are cleared on a daily basis
+          <p class="sub-instruction intervalT">
+            These tasks are cleared on a specified interval. Currently every 1
+            day
           </p>
           <ul class="collection shad">
             <li class="collection-item">
