Added file menu to load and save quadrants

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self' 'unsafe-inline'; script-src 'self' "
     />
-    <title>Chronos</title>
+    <title>Quadra</title>
     <link rel="stylesheet" href="css/materialize.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -64,9 +64,17 @@
                   </li>
                   <li class="collection-item">
                     Remember to dream big but start small
+                    <div class="further-info desc-text">
+                      this is the description
+                    </div>
+                    <span class="further-info time">time part</span>
                   </li>
                   <li class="collection-item">
                     Tell that p***y n***a to check his period
+                    <div class="further-info desc-text">
+                      this is the description
+                    </div>
+                    <span class="further-info time">time part</span>
                   </li>
                 </ol>
               </td>
