--- a/app/info.html
+++ b/app/info.html
@@ -11,7 +11,7 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self' 'unsafe-inline'; script-src 'self' "
     />
-    <title>Chronos</title>
+    <title>Quadra</title>
     <link rel="stylesheet" href="css/materialize.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
