--- a/app/index.html
+++ b/app/index.html
@@ -167,6 +167,12 @@
                 >X</span
               >
             </li>
+            <li class="collection-item">This is for the complete task <div class="further-info desc-text">A short description</div><span class="time">20-Feb-2021 14:36:08</span>
+            <span
+                class="badge btn-cable-pink white-text waves-effect waves-light"
+                >X</span
+              >
+            </li>
           </ul>
         </div>
       </div>
