Added custom scrollbar to the extend-info div

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
           <table class="col s10 quad-table">
             <tr>
-              <td class="top-left">
+              <td class="top-left scrollable bound">
                 <h5>Important and Urgent</h5>
                 <ol class="collection IUList">
                   <li class="collection-item">Buy milk</li>
@@ -34,7 +34,7 @@
                   <li class="collection-item">Buy scapel</li>
                 </ol>
               </td>
-              <td class="top-right">
+              <td class="top-right scrollable bound">
                 <h5>Unimportant and Urgent</h5>
                 <ol class="collection NIUList">
                   <li class="collection-item">Burn the meat</li>
@@ -44,7 +44,7 @@
               </td>
             </tr>
             <tr>
-              <td class="bottom-left">
+              <td class="bottom-left scrollable bound">
                 <h5>Important and Not Urgent</h5>
                 <ol class="collection INUList">
                   <li class="collection-item">Give him a loan</li>
@@ -52,7 +52,7 @@
                   <li class="collection-item">Get my foam from AMD or ryzen</li>
                 </ol>
               </td>
-              <td class="bottom-right">
+              <td class="bottom-right scrollable bound">
                 <h5>Unimportant and Not Urgent</h5>
                 <ol class="collection NINUList">
                   <li class="collection-item">
@@ -167,8 +167,11 @@
                 >X</span
               >
             </li>
-            <li class="collection-item">This is for the complete task <div class="further-info desc-text">A short description</div><span class="time">20-Feb-2021 14:36:08</span>
-            <span
+            <li class="collection-item">
+              This is for the complete task
+              <div class="further-info desc-text">A short description</div>
+              <span class="time">20-Feb-2021 14:36:08</span>
+              <span
                 class="badge btn-cable-pink white-text waves-effect waves-light"
                 >X</span
               >
