--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
                     <span class="further-info time">time part</span>
                   </li>
                   <li class="collection-item">
-                    Tell that p***y n***a to check his period
+                    Tell that teacher to check his timetable
                     <div class="further-info desc-text">
                       this is the description
                     </div>
