--- a/app/contact.html
+++ b/app/contact.html
@@ -25,18 +25,52 @@
           If you like what you've seen and you feel I can contribute to the
           vision you have for your business or company you can reach out
         </p>
-        <div class="row">
-          <div class="col s2 l2 m2"></div>
-
-          <div class="col s2 l2 m2">github</div>
-          <div class="col s2 l2 m2">linkedin</div>
-          <div class="col s2 l2 m2">Gmail</div>
-          <div class="col s2 l2 m2">Phone number</div>
-
-          <div class="col s2 l2 m2"></div>
+        <div class="cent">
+          <div class="grid-wrapper">
+            <div id="github">
+              <div>
+                <img
+                  class="icon"
+                  src="./assets/github-square-brands.svg"
+                  class="git-icon"
+                  alt="github icon"
+                />
+              </div>
+              <div class="ic-text">Github</div>
+            </div>
+            <div id="linkedin">
+              <div>
+                <img
+                  class="icon"
+                  src="./assets/linkedin-brands.svg"
+                  alt="linkedin icon"
+                />
+              </div>
+              <div>Linkedin</div>
+            </div>
+            <div id="gmail">
+              <div>
+                <img
+                  class="icon"
+                  src="./assets/envelope-regular.svg"
+                  alt="gmail icon"
+                />
+              </div>
+              <div class="ic-text">Gmail</div>
+            </div>
+            <!-- <div>
+            <img
+              src="./assets/phone-square-solid.svg"
+              class="icon"
+              alt="phone icon"
+            />
+            <div class="icon-text">Phone</div>
+          </div> -->
+          </div>
         </div>
       </div>
     </div>
+    <script src="./js/materialize.min.js"></script>
     <script src="./js/contact.js"></script>
   </body>
 </html>
