Cleaned up the UI

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <div class="blurrable">
-        <h3 class="quad-title">Priority Quadrant</h3>
+        <h3 class="quad-title">Quadrants</h3>
         <div class="row">
           <div class="col s1 m1 l1">
             <!-- to center the quadrant -->
@@ -29,17 +29,54 @@
               <td class="top-left scrollable bound">
                 <h5>Important and Urgent</h5>
                 <ol class="collection IUList">
-                  <li class="collection-item">Buy milk</li>
-                  <li class="collection-item">Buy orange</li>
-                  <li class="collection-item">Buy scapel</li>
+                  <li class="collection-item">
+                    Task 1: Click Me!!!
+                    <div class="further-info desc-text">
+                      Welcome! Hopefully quadra helps you attain that productivity level that you are capable of.
+                    </div>
+                    <span class="further-info time">Time of task creation shows here</span>
+                  </li>
+                  <li class="collection-item">
+                    Task 2: Double click me!
+                    <div class="further-info desc-text">
+                      Double clicking sends this task to the 'Complete Task' list. This description will not show there.
+                    </div>
+                    <span class="further-info time">Time of task creation shows here and also on the 'CompleteTask' list</span>
+                  </li>
+                  <li class="collection-item">
+                    Task 3: Press Ctrl or Cmd + W
+                    <div class="further-info desc-text">
+                      This is the shortcut to open this quadrant.
+                    </div>
+                    <span class="further-info time">Time of task creation shows here</span>
+                  </li>
                 </ol>
               </td>
               <td class="top-right scrollable bound">
                 <h5>Unimportant and Urgent</h5>
                 <ol class="collection NIUList">
-                  <li class="collection-item">Burn the meat</li>
-                  <li class="collection-item">Dump the thrash</li>
-                  <li class="collection-item">Finish star wars</li>
+                  <li class="collection-item">
+                    Task 1: Save the quadrants
+                    <div class="further-info desc-text">
+                      Pressing Crtl or Cmd + Shift + S or going to File > Save Quadrant will save the quadrants into a .qdr file of your choice which you can place anywhere you like on your device. This allows you freedom to have and manage different QDRs for different purposes at the same time.
+                      Tip: Saving the quadrants with meaningful namesmakes it easier for referencing.
+                    </div>
+                    <span class="further-info time">Time of task creation shows here</span>
+                  </li>
+                  <li class="collection-item">
+                    Task 2: Loading the quadrants
+                    <div class="further-info desc-text">
+                      Pressing Ctrl or Cmd + Shift + O or going to File > Load Quadrant will open your qdr file.
+                    </div>
+                    <span class="further-info time">Time of task creation shows here</span>
+                  </li>
+                  <li class="collection-item">
+                    Task 3: Press Ctrl or Cmd + E
+                    <div class="further-info desc-text">
+                      This is the shortcut to open this quadrant.
+                    </div>
+                    <span class="further-info time">Time of task creation shows here</span>
+                  </li>
                 </ol>
               </td>
             </tr>
@@ -47,34 +84,52 @@
               <td class="bottom-left scrollable bound">
                 <h5>Important and Not Urgent</h5>
                 <ol class="collection INUList">
-                  <li class="collection-item">Give him a loan</li>
-                  <li class="collection-item">Buy my harley davidson</li>
-                  <li class="collection-item">Get my foam from AMD or ryzen</li>
+                  <li class="collection-item">
+                    Task 1: Opening the settings
+                    <div class="further-info desc-text">
+                      Press Ctrl or Cmd + K to open the settings page. You can change the name of the quadrants from the settings page, you can also change the number of days you want to wait before you clear the complete list.
+                    </div>
+                    <span class="further-info time">Time of task creation shows here</span>
+                  </li>
+                  <li class="collection-item">
+                    Task 2: Restoring defaults
+                    <div class="further-info desc-text">
+                      Don't worry if you mess things up or if you just want to go back to a fresh start. You can restore the default settings. Just go to Actions > Settings > Restore defaults.
+                    </div>
+                    <span class="further-info time">Time of task creation shows here</span>
+                  </li>
+                  <li class="collection-item">
+                    Task 3: Press Ctrl or Cmd + S 
+                    <div class="further-info desc-text">
+                      This is the shortcut to open this quadrant.
+                    </div>
+                    <span class="further-info time">Time of task creation shows here</span>
+                  </li>
                 </ol>
               </td>
               <td class="bottom-right scrollable bound">
                 <h5>Unimportant and Not Urgent</h5>
                 <ol class="collection NINUList">
                   <li class="collection-item">
-                    This is in preparation for the complete task part
+                    Task 1
                     <div class="further-info desc-text">
-                      this is the description
+                      The description appears here (remember, it's optional)
                     </div>
-                    <span class="further-info time">time part</span>
+                    <span class="further-info time">Time of task creation shows here</span>
                   </li>
                   <li class="collection-item">
-                    Remember to dream big but start small
+                    Task 2
                     <div class="further-info desc-text">
-                      this is the description
+                      Remember, double click to remove this task from here and send it to the 'Complete Task' list
                     </div>
-                    <span class="further-info time">time part</span>
+                    <span class="further-info time">Time of task creation shows here</span>
                   </li>
                   <li class="collection-item">
-                    Tell that teacher to check his timetable
+                    Task 3: Press Ctrl or Cmd + D 
                     <div class="further-info desc-text">
-                      this is the description
+                      This is the shortcut to open this quadrant.
                     </div>
-                    <span class="further-info time">time part</span>
+                    <span class="further-info time">Time of task creation shows here</span>
                   </li>
                 </ol>
               </td>
@@ -148,34 +203,29 @@
             day
           </p>
           <ul class="collection shad">
-            <li class="collection-item">
-              Task, date
-              <span
-                class="badge btn-cable-pink white-text waves-effect waves-light"
-                >X</span
-              >
-            </li>
-            <li class="collection-item">
-              Task, date<span
-                class="badge btn-cable-pink white-text waves-effect waves-light"
-                >X</span
-              >
-            </li>
-            <li class="collection-item">
-              Task, date<span
-                class="badge btn-cable-pink white-text waves-effect waves-light"
-                >X</span
-              >
-            </li>
-            <li class="collection-item">
-              This is for the complete task
+          <li class="collection-item">
+              This is what completed tasks look like
               <div class="further-info desc-text">A short description</div>
-              <span class="time">20-Feb-2021 14:36:08</span>
+              <span class="time">20-Feb-Year 14:36:08</span>
               <span
                 class="badge btn-cable-pink white-text waves-effect waves-light"
                 >X</span
               >
             </li>
+            <li class="collection-item">
+              Press the X to remove a completed task before the interval is due.<span
+                class="badge btn-cable-pink white-text waves-effect waves-light"
+                >X</span
+              >
+            </li>
+            <li class="collection-item">
+              Cheers!! You can now use Quadra!
+              <span
+                class="badge btn-cable-pink white-text waves-effect waves-light"
+                >X</span
+              >
+            </li>
+            
           </ul>
         </div>
       </div>
